SteveH: use ephemeral port for testing server